src/app.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
@tailwind base;
@tailwind components;
@tailwind utilities;


::view-transition-old(root),
::view-transition-new(root) {
    animation-duration: 0.4s;
}


@layer base {
  html {
    font-display: swap;
  }
}

@layer base {
  /* Rich text */
  .prose a {
    @apply text-blue-600 no-underline hover:underline;
  }
  
  .prose ul {
    @apply list-disc list-outside ml-4;
  }

  .prose ol {
    @apply list-decimal list-outside ml-4;
  }

  .prose-invert a {
    @apply text-blue-400;
  }
}

